qr code component implemented

--- a/src/app/elite/elite-corporate/elite-corporate.component.scss
+++ b/src/app/elite/elite-corporate/elite-corporate.component.scss
@@ -30,14 +30,14 @@
     }
 }
 
-.inprogress{
+.inprogress {
     color: orange;
 }
 
-.complete{
+.complete {
     color: greenyellow;
 }
-//desktop
+//desktop 🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️
 @media (min-width: 576px) {
     .mainContainer {
         display: flex;
@@ -50,7 +50,7 @@
         border: black solid 5px;
         background-color: rgb(0 0 0 / 88%);
         border-radius: 10px;
-        overflow: hidden;
+        // overflow: hidden;
 
         position: absolute;
         top: 50%;
@@ -59,13 +59,12 @@
         transform: translate(-50%, -53%);
         @include BoxShadow(6);
 
-        
         .logo-miami {
             font-size: 30px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            color: aqua;
+            color: white;
             font-family: Miami;
             padding-top: 20px;
             background-color: black;
@@ -115,17 +114,17 @@
         }
 
         .menu {
-            height: 94%;
+            // height: 94%;
             overflow-x: hidden;
-            overflow-y: scroll;
+            // overflow-y: scroll;
             position: absolute;
             top: 180px;
         }
 
-        .qr-code-card {
+        .foodCard {
             display: flex;
             flex-direction: column;
-            border: rgb(255, 255, 255) solid 1px;
+            // border: rgb(255, 255, 255) solid 1px;
             border-radius: 5px;
             justify-content: space-between;
             align-items: center;
@@ -170,7 +169,7 @@
         z-index: 1;
         height: 714px;
         margin: 0;
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -53%);
@@ -205,21 +204,23 @@
         height: auto;
     }
 }
-//mobile
+//mobile🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️
 @media (max-width: 576px) {
     .mainContainer {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        height: 100vh;
+        // height: 100vh;
         overflow: hidden;
         background-color: rgb(0 0 0 / 88%);
         color: rgb(0, 0, 0);
 
         .logo-miami {
             font-size: 20px;
+            position: fixed;
             display: flex;
+            z-index: 1;
             margin-bottom: 10px;
             flex-direction: column;
             align-items: center;
@@ -275,18 +276,18 @@
         }
 
         .menu {
-            // height: 60%;
+            // height: 90%;
             overflow-x: hidden;
             overflow-y: scroll;
             position: absolute;
-            top: 170px;
+            top: 146px;
             background-color: rgb(0 0 0 / 88%);
         }
 
-        .qr-code-card {
+        .foodCard {
             display: flex;
             flex-direction: column;
-            border: rgb(255, 255, 255) solid 1px;
+            // border: rgb(255, 255, 255) solid 1px;
             border-radius: 5px;
             justify-content: space-between;
             align-items: center;
@@ -342,7 +343,7 @@
         z-index: 1;
         height: 714px;
         margin: 0;
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -53%);
@@ -377,7 +378,7 @@
         max-width: 300px;
     }
 }
-// small mobile
+// small mobile🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️
 @media (max-width: 400px) {
 }
 
