--- a/src/app/elite/elite-promotion/elite-promotion.component.html
+++ b/src/app/elite/elite-promotion/elite-promotion.component.html
@@ -33,8 +33,8 @@
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>RULES</mat-label>
-                <input matInput type="text" placeholder="Name" [(ngModel)]="PromotionInfo.PromotionRules"
-                    [ngModelOptions]="{standalone: true}">
+                <textarea matInput type="text" placeholder="Name" [(ngModel)]="PromotionInfo.PromotionRules"
+                    [ngModelOptions]="{standalone: true}"></textarea>
             </mat-form-field>
 
             <mat-error *ngIf="emailregistered">
