--- a/src/app/elite/elite-qr-code-designer/elite-qr-code-designer.component.scss
+++ b/src/app/elite/elite-qr-code-designer/elite-qr-code-designer.component.scss
@@ -65,7 +65,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            color: aqua;
+            color: white;
             font-family: Miami;
             padding-top: 20px;
             background-color: black;
