--- a/src/app/elite/elite.component.scss
+++ b/src/app/elite/elite.component.scss
@@ -58,7 +58,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            color: aqua;
+            color: white;
             font-family: Miami;
             padding-top: 20px;
             background-color: black;
