--- a/src/app/bmx-creator-deprecated/bmx-creator.component.scss
+++ b/src/app/bmx-creator-deprecated/bmx-creator.component.scss
@@ -45,6 +45,7 @@
     // background-image: url("https://image.shutterstock.com/shutterstock/photos/1897867054/display_1500/stock-vector-currency-watermark-background-intense-illustration-detailed-design-1897867054.jpg");
 
     // @include BoxShadow(6);
+    
 
     .nameContainer {
         display: flex;
@@ -59,25 +60,24 @@
         // font-size: 30px;
         margin-bottom: 161px;
         margin-top: -15px;
-        // text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
         box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
     .testName {
-        font-size: 140px;
+        // font-size: 140px;
         margin-top: -138px;
         color: darkblue;
-        font-size: 150px;
-        // text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
         box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
     .pronounciation {
         // font-size: 30px;
-        // text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
         box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
     .rationale {
         // font-size: 35px;
-        // text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
         box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
 }
@@ -383,7 +383,6 @@
 //     outline: none;
 // }
 
-
 $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 @for $i from 1 through 5 {
     .voteIconButton:nth-child(#{$i}) {
@@ -391,7 +390,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
         animation: fadeIn 0.2s ease-in-out backwards;
         animation-iteration-count: 1;
         animation-delay: $i * 0.15 + s;
-        @include BoxShadow(2);
+        @include BoxShadow(6);
     }
 
     .voteIconButton:hover:nth-child(#{$i}) {
@@ -430,7 +429,6 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
         background: white;
     }
 }
-
 
 .voteOverviewBox {
     border: blue 1px solid;
@@ -494,6 +492,51 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     animation: heartBeat 10000ms ease-in-out 100ms infinite, fadeOut 10000ms ease-in-out 100ms infinite;
 }
 
+.GO_LOGIN {
+    width: 70px;
+    height: 70px;
+    border: 5px solid darkblue;
+    position: absolute;
+    right: 192px;
+    bottom: -35px;
+    outline: none;
+    font-size: 36px;
+    line-height: 31px;
+    background-color: white;
+    color: darkblue;
+    font-family: auto;
+    z-index: 2;
+    animation: tada 1000ms ease-in-out 1ms forwards;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
+    @include BoxShadow(6);
+}
+
+.GO_Off__LOGIN:hover {
+    transform: scale(1.2);
+}
+
+.GO_Off__LOGIN {
+    width: 70px;
+    height: 70px;
+    border: 5px solid white;
+    position: absolute;
+    right: 192px;
+    bottom: -35px;
+    outline: none;
+    font-size: 36px;
+    line-height: 30px;
+    background-color: darkblue;
+    color: white;
+    font-family: auto;
+    z-index: 2;
+    transition: all 100ms ease-in-out;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
+    @include BoxShadow(6);
+    // animation: heartBeat 10000ms ease-in-out 20ms infinite;
+}
+
 .GO {
     width: 70px;
     height: 70px;
@@ -541,20 +584,20 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 .heart-favorite {
     width: 70px;
     height: 70px;
-    border: 5px solid #09bf06;
+    border: 5px solid red;
     position: absolute;
     right: 434px;
     bottom: -35px;
     outline: none;
     // font-size: 45px;
     line-height: 31px;
-    background-color: #09bf06;
+    background-color: red;
     color: grey;
     font-family: auto;
     z-index: 2;
     animation: tada 1000ms ease-in-out 1ms forwards;
     text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
-    box-shadow: inset inset 0px 0px 5px #c1c1c1;      
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
     @include BoxShadow(6);
     transform: scale(1.2);
 }
@@ -573,8 +616,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     outline: none;
     font-size: 45px;
     line-height: 30px;
-    // background-color: #ee0278;
-    background-color: #09bf06;
+    background-color: red;
     color: white;
     font-family: auto;
     z-index: 2;
@@ -589,7 +631,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     @include BoxShadow(6);
     width: 35px;
     height: 35px;
-    border: 3px solid #ee7802;
+    border: 3px solid #ffad37;
     position: absolute;
     right: 538px;
     bottom: -19px;
@@ -597,7 +639,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     font-size: 23px;
     line-height: 10px;
     background-color: white;
-    color: #ee7802;
+    color: #ffad37;
     font-family: auto;
 }
 .G2 {
@@ -634,7 +676,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     @include BoxShadow(6);
     width: 35px;
     height: 35px;
-    border: 3px solid #0278ee;
+    border: 3px solid purple;
     position: absolute;
     right: 374px;
     bottom: -19px;
@@ -642,7 +684,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     font-size: 23px;
     line-height: 10px;
     background-color: white;
-    color: #0278ee;
+    color: purple;
     font-family: auto;
 }
 
@@ -697,7 +739,6 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
         background-color: greenyellow;
     }
 }
-
 
 .goButton {
     border-radius: 11px;
@@ -848,7 +889,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 
         .rankingBox {
             .voteIconRank {
-                // text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+                text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
                 font-size: 40px;
             }
 
@@ -893,11 +934,11 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
                 font-size: 20px;
                 margin: 30px 10px;
                 animation: fadeIn 0.5s ease-in forwards;
-                // text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+                text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
                 box-shadow: inset inset 0px 0px 5px #c1c1c1;
             }
             .groupNameItemNotation {
-                font-size: 20px;
+                font-size: 15px;
                 padding-left: 0px;
                 margin: 21px 6px;
                 animation: fadeIn 0.9s ease-in forwards;
@@ -976,6 +1017,12 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     }
 }
 
-// .example-card {
-//     width: 400px;
-// }
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+}
+
+.example-full-width {
+    width: 100%;
+}
