--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -1,6 +1,9 @@
 .active-rating-star {
     color: #76d354;
 }
+.active-rating-bar {
+    color: #e7c00f;
+}
 .rating-star {
     color: grey;
 }
@@ -29,7 +32,7 @@
     width: 33%;
     text-align: start;
     margin: 10px 10px;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: bold;
     color: #324395;
     margin-bottom: 20px;
@@ -55,9 +58,21 @@
     max-width: 300px;
 }
 
+.header-title-rationale-box {
+    font-weight: bold;
+    color: #324395;
+    border: none;
+    max-width: 300px;
+}
+
 .row-box {
     border: none;
     max-width: 300px;
+}
+
+.rationale-box {
+    border: none;
+    width: 300px;
 }
 
 .add-column {
