--- a/src/app/elite/elite-promoter/elite-promoter.component.html
+++ b/src/app/elite/elite-promoter/elite-promoter.component.html
@@ -1,11 +1,11 @@
 <div class="mainContainer disable-dbl-tap-zoom">
 
-    <div class="logo-miami">
+    <div class="logo-miami"  style="background-image: url(./assets/img/elite/header.jpg);background-size: contain;">
         <img class="logo" src="./assets/img/elite/logow.png">
         <p style="animation: swing 200ms ease-in-out 100ms forwards; padding-top: 20px;">{{title}}</p><br>
     </div>
 
-    <div style="display: flex;  flex-direction: column; align-items: center;" class="menu">
+    <div style="display: flex;  flex-direction: column; align-items: center;background-image: url(./assets/img/elite/pattherBG.jpg);background-size: contain;" class="menu">
 
         <!-- 🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️ Promoter INFO 🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️ -->
         <form *ngIf="isPromoterRegiter" name="loginForm" novalidate
@@ -95,7 +95,7 @@
         
 
     </div>
-    <div class="footer">
+    <div class="footer"  style="background-image: url(./assets/img/elite/header.jpg);background-size: contain;">
         <!-- <button mat-mini-fab color="warn"
             style="color: white;outline: none;position: absolute;bottom: 19px; left: 80px;background-color: goldenrod;">
             <mat-icon style="line-height: 18px;" (click)="qrcode()">qr_code</mat-icon>
