--- a/src/assets/fonts/hackers.scss
+++ b/src/assets/fonts/hackers.scss
@@ -39,6 +39,10 @@
     font-family: LinLibertine_R;
     src: url("LinLibertine_R.ttf") format("truetype");
 }
+@font-face {
+    font-family: Oprah;
+    src: url("OprahShowDemoRegular.ttf") format("truetype");
+}
 
 
 // serif
