--- a/src/app/bmx/bmx-creator/image-uploader/image-uploader.component.html
+++ b/src/app/bmx/bmx-creator/image-uploader/image-uploader.component.html
@@ -1,6 +1,7 @@
-<h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
-<!-- HEADER INPUTS -->
-<div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Image Uploader</div>
+
+<div style="width: 75%;">
+    <h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
+    <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Image Uploader</div>
 
 <div style="display: flex;flex-direction: row;justify-content: space-between;">
 
@@ -99,3 +100,10 @@
     </div>
 
 </div>
+</div>
+
+
+<!-- HEADER INPUTS -->
+
+
+
